增加服务器配置项

--- a/server_list.conf
+++ b/server_list.conf
@@ -37,3 +37,4 @@
 10.14.255.134	pro_hk_hk3_zfs_base_ops_elk_134
 10.14.255.135	pro_hk_hk3_zfs_base_ops_zabbix_135
 10.14.255.136	pro_hk_hk3_zfs_elishuo_protal_http_136
+10.14.255.137	pro_hk_hk3_zfs_elishuo_protal_http_137
